# jpeg-rusturbo

./: .gitignore  BENCH.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  NOTICE.md  README.md  deny.toml
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
.uchgs/commit/2026-05-25T201504Z-f03184c1/: confidential-receipt.json  confidential-report.md
.uchgs/commit/2026-05-26T024222Z-47f01179/: confidentiality-receipt.json  confidentiality-report.md
benches/: pipeline.rs  vs_image.rs
docs/: ARCHITECTURE.md
examples/: visual_realtime.rs
src/: color.rs  dct.rs  huffman.rs  huffman_optimize.rs  lib.rs  markers.rs  progressive_encode.rs  quant.rs  tables.rs
src/arch/: mod.rs  neon.rs  scalar.rs  x86_64.rs
src/decode/: baseline.rs  error.rs  huffman.rs  markers.rs  mod.rs  progressive.rs
src/encode/: huffman.rs  huffman_optimize.rs  mod.rs  progressive.rs  quant.rs
tests/: cmyk.rs  comparison_bench.rs  comparison_progressive.rs  decode_metadata.rs  decode_roundtrip.rs  grayscale.rs  metadata.rs  optimize_huffman.rs  progressive.rs  progressive_optimize.rs  roundtrip.rs  threaded.rs
