[package]
name = "jpeg-rusturbo"
version = "0.5.1"
edition = "2024"
rust-version = "1.85"   # edition 2024 stabilized in Rust 1.85.
license = "MIT OR Apache-2.0"
description = "SIMD-accelerated baseline JPEG encoder and Huffman (baseline + progressive) decoder."
repository = "https://github.com/naoto256/jpeg-rusturbo"
readme = "README.md"
keywords = ["jpeg", "encoder", "decoder", "simd", "neon"]
categories = ["multimedia::images", "encoding"]
# Slim the published package: consumers don't need CI configs or the
# integration test crate. `tests/roundtrip.rs` uses the `image` crate
# only as a dev-dependency for decode-side verification and is not
# referenced from anything reachable via the public API.
exclude = [
    ".github/",
    "tests/",
]

[lib]
path = "src/lib.rs"

[features]
# Force the scalar fallback even on aarch64. Used by the bench harness
# to measure NEON speedup vs scalar without leaving the same binary.
force-scalar = []

[dependencies]
rayon = "1"

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg"] }
