[package]
name = "jpeg-rusturbo"
version = "0.8.0"
edition = "2024"
rust-version = "1.85"   # edition 2024 stabilized in Rust 1.85.
license = "MIT OR Apache-2.0"
description = "SIMD-accelerated JPEG encoder (baseline + progressive, EXIF / ICC pass-through) and Huffman decoder."
repository = "https://github.com/naoto256/jpeg-rusturbo"
readme = "README.md"
keywords = ["jpeg", "encoder", "decoder", "simd", "neon"]
categories = ["multimedia::images", "encoding"]
# Slim the published package: consumers don't need CI configs or the
# integration test crate. `tests/roundtrip.rs` uses the `image` crate
# only as a dev-dependency for decode-side verification and is not
# referenced from anything reachable via the public API.
exclude = [
    ".github/",
    "tests/",
]

[lib]
path = "src/lib.rs"

[features]
# Force the scalar fallback even on aarch64. Used by the bench harness
# to measure NEON speedup vs scalar without leaving the same binary.
force-scalar = []

[dependencies]
rayon = "1"

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg"] }
minifb = "0.27"

# Tighten the release profile so the SIMD kernels and the entropy-coder
# inner loop can be cross-inlined across the per-arch backend boundary.
# Linker-time codegen at codegen-units=1 lets LLVM see the whole kernel
# call graph in one shot, which is where the meaningful wins for tight
# per-MCU loops come from. Cost: longer release-build wall-clock; user
# debug / `cargo test` (= dev profile) are unaffected.
[profile.release]
lto = "fat"
codegen-units = 1

# Inherits release but keeps debug-line tables so sampling profilers
# (samply, perf, Instruments) resolve symbols against the optimized
# binary. Build with `cargo build --profile profiling` then sample the
# resulting `target/profiling/<bin>`; production release builds (= the
# `release` profile above) keep the default `debug = false` to stay
# small and stripped.
[profile.profiling]
inherits = "release"
debug = "line-tables-only"
strip = "none"
